# self-driving-vehicle

./: .gitignore  NNdraw.py  README.md  car.py  config_file.txt  config_variables.py  main.py  node.py  pyproject.toml  requirements.md  road.py  tests.py  vect2d.py  world.py
